--- a/style.css
+++ b/style.css
@@ -62,3 +62,34 @@ h1 {
     background-color: rgba(0, 128, 0, 0.547);
 }
 
+.title-india {
+    background-image: url(../odin-recipes/images/indianflag3.webp);
+    background-size: 110% 100px;
+    background-repeat: no-repeat;
+    font-size: 80px;
+    text-align: center;
+}
+
+.subtitle-india span {
+    background: rgb(255,153,51);
+    background: linear-gradient(180deg, rgba(255,153,51,1) 0%, rgba(253,255,255,1) 34%, rgba(253,255,255,1) 68%, rgba(18,137,5,1) 100%);
+    font-size: x-large;
+    border: 1px black solid;
+    padding: 10px;
+    font-weight: bold;
+
+}
+
+.orange-background span,
+.green-background span {
+    padding: 2px;
+    border-radius: 5px;
+}
+
+.orange-background span {
+    background-color: rgba(255,153,51,1);
+}
+
+.green-background span{
+    background-color: rgba(18,137,5,1);
+}
